# mcp-obsidian

./: README.md  openapi.yaml  pyproject.toml
src/mcp_knowledge_base/: obsidian.py  server.py  tools.py
src/mcp_obsidian/: obsidian.py  server.py  tools.py
